--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/alanshaw/genplate.git"
+    "url": "git://github.com/alanshaw/handpipe.git"
   },
   "keywords": [
     "template",
