--- a/package.json
+++ b/package.json
@@ -34,5 +34,8 @@
     "concat-stream": "^1.4.6",
     "tape": "^3.0.3",
     "uglify-js": "^2.4.15"
+  },
+  "engines": {
+    "node": ">=0.11"
   }
 }
